# ai-lead-scoring-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lead_score.ipynb  lead_scoring_system.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BatchUpload.jsx  Gauge.jsx  HealthBanner.jsx  ScoreForm.jsx  ScoreResult.jsx
scripts/: start.sh  train.py
src/lead_scoring/: __init__.py  config.py
src/lead_scoring/api/: main.py  routes.py  schemas.py
src/lead_scoring/data/: generator.py  preprocessor.py
src/lead_scoring/features/: engineering.py
src/lead_scoring/models/: scorer.py  trainer.py
src/lead_scoring/utils/: logging.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py
